--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <center><h1 class='font-effect-fire-animation'>Block Types</h1>
 <h2 class='font-effect-neon'>Installation:</h2></center>
 <p><b>Drag this link to your bookmark bar: <a href="javascript:(function (){var s = document.createElement('script');s.setAttribute('src', 'http:/ealgase.github.io/Block-types/index.js');document.body.appendChild(s);})();">Block Types</a>.  Click on it on the Scratch project you want to add the blocks to. 
-<h2 class='font-effect-neon'><a href='https://github.com/ealgase/Load-Ext'>Click here to view on GitHub</a></h2></center></body>
+<h2 class='font-effect-neon'><a href='https://github.com/ealgase/Block-types'>Click here to view on GitHub</a></h2></center></body>
 </html>
  
